--- a/app/public/home.html
+++ b/app/public/home.html
@@ -30,7 +30,11 @@
 
 		</div>
 
-
+	    <footer class="footer">
+	      <div class="container">
+		        <p><a href="/api/friends">API Friends List</a></p>
+	      </div>
+	    </footer>		
 
 	</div>
 
